<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_local"
            android:icon="@drawable/local"
            android:title="@string/nav_local_music" />
        <item
            android:id="@+id/nav_playlists"
            android:icon="@drawable/ic_playlist"
            android:title="@string/nav_playlists" />
        <item
            android:id="@+id/nav_recent"
            android:icon="@drawable/ic_recent"
            android:title="@string/nav_recently_played" />
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/ic_heart_filled"
            android:title="@string/nav_favourites" />
        <item
            android:id="@+id/nav_folder"
            android:icon="@drawable/folder"
            android:title="@string/nav_folders" />
        <item
            android:id="@+id/nav_view"
            android:icon="@drawable/ic_save_filled"
            android:title="@string/nav_saved_dna" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/nav_settings" />
    </group>

</menu>
